objects/Facilitator_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>All_Meeting_Materials_at_the_Site__c</fullName>
        <label>All Meeting Materials at the Site?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Collateral__c</fullName>
        <label>Anthem Collateral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate Amount</fullName>
                </value>
                <value>
                    <fullName>Did Not Arrive</fullName>
                </value>
                <value>
                    <fullName>Not Enough</fullName>
                </value>
                <value>
                    <fullName>Too much</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Promo__c</fullName>
        <label>Anthem Giveaways</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate Amount</fullName>
                </value>
                <value>
                    <fullName>Did Not Arrive</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Enough</fullName>
                </value>
                <value>
                    <fullName>Too much</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_Number_Attendees__c</fullName>
        <label>Approximate Number Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance_Flow__c</fullName>
        <label>Clarify the Flow during the Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Busy</fullName>
                </value>
                <value>
                    <fullName>Slightly Busy</fullName>
                </value>
                <value>
                    <fullName>Moderately Busy</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billed_Cost_Center__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billed Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_If_too_much_approx_number__c</fullName>
        <label>Collateral- If too much approx number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Not_enough_approx_needed__c</fullName>
        <label>Collateral - Not enough approx # needed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_what_was_done_with_leftover__c</fullName>
        <label>Collateral ,what was done with leftover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left with Client</fullName>
                </value>
                <value>
                    <fullName>Threw out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_being_prep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments on being prepared and trained</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_being_prepared_and_trained__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments on being prepared and trained</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_display_dismantle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments on display dismantle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_display_setup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments on display setup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Collateral__c</fullName>
        <label>Collateral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan Summaries</fullName>
                </value>
                <value>
                    <fullName>Other Materials</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Material__c</fullName>
        <label>Competitor Material - Promo or Raffle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Promo__c</fullName>
        <label>Promo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Giveaways</fullName>
                </value>
                <value>
                    <fullName>Raffle</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors_at_Meeting__c</fullName>
        <description>Medical Competitors at meeting there will be another field for Specialty Competitors</description>
        <label>Medical Competitors at Meeting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem exclusive</fullName>
                </value>
                <value>
                    <fullName>Assurant Health</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>First Health</fullName>
                </value>
                <value>
                    <fullName>Great West Healthcare</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>United HealthCare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_Site_Contact_Provide_Event_Info__c</fullName>
        <label>Did Site Contact Provide Event Info?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_you_feel_prepared_and_trained__c</fullName>
        <label>Did you feel prepared and trained?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_you_participate_in_AM_Strategy_call__c</fullName>
        <label>Strategy Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A strategy call</fullName>
                    <default>true</default>
                    <label>A strategy call</label>
                </value>
                <value>
                    <fullName>A strategy email with client specific material</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exempt__c</fullName>
        <label>Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAQ_Member_Questions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FAQ Member Questions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_Name__c</fullName>
        <formula>Open_Enrollment__r.Facilitator1__r.FirstName + &quot; &quot; + Open_Enrollment__r.Facilitator1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Submitter__c</fullName>
        <formula>IF(
Person_Completing__c = Open_Enrollment__r.Facilitator1__r.Email, Open_Enrollment__r.Facilitator1__r.FirstName + &apos; &apos; + Open_Enrollment__r.Facilitator1__r.LastName,
IF(Person_Completing__c = Open_Enrollment__r.Account_Executive_Email__c, Open_Enrollment__r.Account_Exec_Formula__c,
IF(Person_Completing__c = Open_Enrollment__r.Account_Manager_Email__c, Open_Enrollment__r.Account_Exec_Formula__c,
IF(Person_Completing__c = Open_Enrollment__r.SAR_AcctMgt_Email__c, Open_Enrollment__r.SAR_AcctMgt__c, &apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feedback Submitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giveaways_If_too_much_approx_number__c</fullName>
        <label>Giveaways - If too much approx number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Giveaways_Not_enough_approx_needed__c</fullName>
        <description>If not enough selected for Giveaways asking the approximate number needed</description>
        <label>Giveaways - Not enough approx # needed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_No_please_explain_your_answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If No, please explain your answer:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_too_much_by_how_much__c</fullName>
        <label>Giveaways - If too much by how much?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>101- 250</fullName>
                </value>
                <value>
                    <fullName>251 - 500</fullName>
                </value>
                <value>
                    <fullName>500+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_too_much_what_was_done_with_leftover__c</fullName>
        <label>Giveaways, what was done with leftover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left with Client</fullName>
                </value>
                <value>
                    <fullName>Took back to Office</fullName>
                </value>
                <value>
                    <fullName>Used new Promo Returns process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_Comp__c</fullName>
        <label>Incentive Comp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$50</fullName>
                </value>
                <value>
                    <fullName>$75</fullName>
                </value>
                <value>
                    <fullName>$125</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiries_for_Anthem_PPO_HMO_plans__c</fullName>
        <label>Inquiries for Anthem PPO/HMO plans:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Busy (76+)</fullName>
                </value>
                <value>
                    <fullName>Reasonably Busy Activity (31-75)</fullName>
                </value>
                <value>
                    <fullName>Slow Activity (11-30)</fullName>
                </value>
                <value>
                    <fullName>Very little - no activity (0-10)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Other_Vendor_Promos__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>List Other Vendor Promos</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_site_prep_no_please_explain__c</fullName>
        <description>Explain No answer for Was Meeting site prepared for the Event</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting site prep no, please explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Issues__c</fullName>
        <label>Member Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem.com/Mobile App</fullName>
                </value>
                <value>
                    <fullName>Benefits Covered</fullName>
                </value>
                <value>
                    <fullName>Changes in Plan from Last Enrollment</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Comparison of Plan Options</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Health Insurance Terminology</fullName>
                </value>
                <value>
                    <fullName>Lack of Resources</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prescriptions</fullName>
                </value>
                <value>
                    <fullName>Understanding Health Plan</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Questions_Additional_Comments__c</fullName>
        <description>Additional comments for the Member questions</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Questions Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OE_Training_Prepare_you_for_the_Meeting__c</fullName>
        <label>OE Training Prepare you for the Meeting?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Enrollment__c</fullName>
        <label>Meeting Name</label>
        <referenceTo>SFDC_Volunteer_Event__c</referenceTo>
        <relationshipLabel>Facilitator Feedbacks</relationshipLabel>
        <relationshipName>Facilitator_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_suggestions_feedback_on_Red_Carpet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wellness Kit suggestions and feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outdoor_Event__c</fullName>
        <label>Outdoor Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Completing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>eMail of Person Completing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rate_Success_of_the_overall_event__c</fullName>
        <label>Rate Success of the overall event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Average Event</fullName>
                </value>
                <value>
                    <fullName>Event needs improvement</fullName>
                </value>
                <value>
                    <fullName>Great Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Success_overall_additional_comments__c</fullName>
        <description>Additional comments on success of the overall event</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Success overall additional comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate_ease_of_dismantle_packing_shipping__c</fullName>
        <label>Rate ease of dismantle/packing/shipping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Difficult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_ease_of_setting_up_display__c</fullName>
        <label>Rate ease of setting up display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Difficult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Carpet_Display_Advantage__c</fullName>
        <label>Did Wellness Kit Display Advantage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Carpet_Only_Advantage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(Red Carpet Only) - Did Red Carpet display gave Anthem a competitive advantage or helped drive engagement at table (vs.standard display)?</inlineHelpText>
        <label>(Wellness Kit only) Advantage?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_FACFB_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy FACFB ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Competitors_at_Meeting__c</fullName>
        <label>Specialty Competitors at Meeting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aflac</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Colonial</fullName>
                </value>
                <value>
                    <fullName>Delta Dental</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Metlife</fullName>
                </value>
                <value>
                    <fullName>VSP Vision care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_Comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted to Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <formula>IF(Person_Completing__c = Open_Enrollment__r.Facilitator1__r.Email,&apos;Facilitator Feedback&apos;, &apos;Sales Feedback&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Expenses__c</fullName>
        <label>Travel Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Was_Red_Carpet_display_worth_effort__c</fullName>
        <label>Was Wellness Kit display worth effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Wellness_Kit_display_worth_effort__c</fullName>
        <label>Was Wellness Kit display worth effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_meeting_site_prepared__c</fullName>
        <label>Was meeting site prepared for this event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>When_did_employees_attend_the_event__c</fullName>
        <label>When did employees attend the event?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before/After Shift</fullName>
                </value>
                <value>
                    <fullName>Lunch break</fullName>
                </value>
                <value>
                    <fullName>Normal Work Hours</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Personal Break times</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Worthwhile_Comments__c</fullName>
        <description>If facilitator says not worth while they need to supply comments</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Worthwhile Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Worthwhile_Next_year__c</fullName>
        <label>Worthwhile Next year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Facilitator Feedback</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilitator Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>